--- a/Npgsql.EFCore.Tracker.Api.Demo/Npgsql.EFCore.Tracker.Api.Demo.csproj
+++ b/Npgsql.EFCore.Tracker.Api.Demo/Npgsql.EFCore.Tracker.Api.Demo.csproj
@@ -1,18 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net9.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.11" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.11" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.11">
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Npgsql.EFCore.Tracker.AspNet\Npgsql.EFCore.Tracker.AspNet.csproj" />
-    <ProjectReference Include="..\Npgsql.EFCore.Tracker.Core\Npgsql.EFCore.Tracker.Core.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Npgsql.EFCore.Tracker.AspNet\Npgsql.EFCore.Tracker.AspNet.csproj" />
+		<ProjectReference Include="..\Npgsql.EFCore.Tracker.Core\Npgsql.EFCore.Tracker.Core.csproj" />
+	</ItemGroup>
 
 </Project>
