--- a/Tracker.Api.Demo/Tracker.Api.Demo.csproj
+++ b/Tracker.Api.Demo/Tracker.Api.Demo.csproj
@@ -13,6 +13,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\Tracker.AspNet\Tracker.AspNet.csproj" />
+		<ProjectReference Include="..\Tracker.Npgsql\Tracker.Npgsql.csproj" />
 	</ItemGroup>
 
 </Project>
