--- a/Tracker.AspNet/Tracker.AspNet.csproj
+++ b/Tracker.AspNet/Tracker.AspNet.csproj
@@ -9,6 +9,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Routing" Version="2.3.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.11" />
 	</ItemGroup>
 
 	<ItemGroup>
