--- a/Tracker.Npgsql/Tracker.Npgsql.csproj
+++ b/Tracker.Npgsql/Tracker.Npgsql.csproj
@@ -7,6 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.11" />
 	</ItemGroup>
 
