--- a/Tracker.SqlServer/Tracker.SqlServer.csproj
+++ b/Tracker.SqlServer/Tracker.SqlServer.csproj
@@ -7,10 +7,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.11" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.11" />
-		<PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.3" PrivateAssets="all"/>
-		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" PrivateAssets="all"/>
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" PrivateAssets="all" />
 	</ItemGroup>
 
 	<ItemGroup>
