--- a/Tracker.AspNet.Tests/Tracker.AspNet.Tests.csproj
+++ b/Tracker.AspNet.Tests/Tracker.AspNet.Tests.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Tracker.AspNet\Tracker.AspNet.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
