--- a/Tracker.Npgsql.Tests/Tracker.Npgsql.Tests.csproj
+++ b/Tracker.Npgsql.Tests/Tracker.Npgsql.Tests.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Tracker.Npgsql\Tracker.Npgsql.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
