--- a/Tracker.SqlServer.Tests/Tracker.SqlServer.Tests.csproj
+++ b/Tracker.SqlServer.Tests/Tracker.SqlServer.Tests.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Tracker.SqlServer\Tracker.SqlServer.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
