--- a/Tracker.SqlServer/Tracker.SqlServer.csproj
+++ b/Tracker.SqlServer/Tracker.SqlServer.csproj
@@ -11,6 +11,7 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.11" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.11" />
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" PrivateAssets="all" />
+		<PackageReference Include="xunit.abstractions" Version="2.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
